--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,7 +6,9 @@ html
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    div id="container-fluid"
-      div id="row"
-        div id="col-lg-12"
-          = yield
+    div class="container-fluid"
+      div class="row"
+        div class="col-lg-12"
+          div class="card card-user"
+            = yield
+    = render 'shared/modal'
