--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,6 +6,8 @@ html
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
+    div id="flash_messages_div"
+      = render 'shared/flash_messages'
     div class="container-fluid"
       div class="row"
         div class="col-lg-12"
