Funcionalidad de creación
Se termina el desarrollo de la funcionalidad de creación de tienda y sus respectivas validaciones.

--- a/app/views/catalogs/create.js.erb
+++ b/app/views/catalogs/create.js.erb
@@ -1,3 +1,5 @@
-show_content_modal("<%= @clase %>", 'create');
-$("#modalCatalogos").modal("show");
+<% if @create == true %>
+  location.reload();
+<% else %>
 $("#modal_catalogos_content").html("<%= j render partial: "#{@render}", locals: {accion: 'create'} %>");
+<% end %>
