--- a/app/views/stores/_form.html.slim
+++ b/app/views/stores/_form.html.slim
@@ -11,7 +11,7 @@ div.row
   div.col-lg-12
     h6.text-primary Ingrese la información requerida.
     hr.hr-m
-= form_tag({action: accion, controller: :catalogs}, remote: true, id: "catalogos_form" ) do
+= form_tag({action: accion, controller: :catalogs}, remote: true, id: "stores_form" ) do
   div.row
     div.col-lg-12.pr-1
       div.form-group
