--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,1 +1,2 @@
-= link_to 'Tiendas', catalogs_path(class_name: "Store")
+= link_to t("activerecord.model.store.other"), catalogs_path(class_name: "Store")
+= link_to t("activerecord.model.book.other"), catalogs_path(class_name: "Book")
