--- a/app/views/catalogs/index.html.slim
+++ b/app/views/catalogs/index.html.slim
@@ -2,7 +2,7 @@ div class="card-header"
   div class="row"
     div class="col-md-6"
       h5 class="card-title"
-        = 'Catalogo de ' + t('activerecord.model.store.other')
+        = 'Catalogo de ' + t("activerecord.model." + @class_name.downcase + ".other")
     div class="col-md-6 d-flex"
       div class="ml-auto"
         a class="btn btn-success btn-round" data-remote="true" href="/catalogs/new?class_name=#{@class_name}" Registrar
