--- a/app/views/catalogs/edit.js.erb
+++ b/app/views/catalogs/edit.js.erb
@@ -1,3 +1,3 @@
-show_content_modal("<%= t("activerecord.model.store.one") %>", 'edit');
+show_content_modal("<%= t("activerecord.model." + @class_name.downcase + ".one") %>", 'edit');
 $("#modalCatalogos").modal("show");
 $("#modal_catalogos_content").html("<%= j render partial: "#{@render}", locals: {accion: 'update'} %>");
