--- a/app/views/catalogs/new.js.erb
+++ b/app/views/catalogs/new.js.erb
@@ -1,3 +1,3 @@
-show_content_modal("<%= t("activerecord.model.store.one") %>", 'create');
+show_content_modal("<%= t("activerecord.model." + @class_name.downcase + ".one") %>", 'create');
 $("#modalCatalogos").modal("show");
 $("#modal_catalogos_content").html("<%= j render partial: "#{@render}", locals: {accion: 'create'} %>");
