--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,11 +6,19 @@ html
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    div id="flash_messages_div"
-      = render 'shared/flash_messages'
-    div class="container-fluid"
-      div class="row"
-        div class="col-lg-12"
-          div class="card card-user"
-            = yield
+    div.wrapper
+      div.sidebar data-color="blue"
+        div.sidebar-wrapper
+          div.logo
+          div.user
+          ul.nav
+            li.nav-item
+      div.main-panel
+        = render 'shared/navbar'
+        div id="flash_messages_div"
+          = render 'shared/flash_messages'
+        div.content
+          div.container-fluid
+            div.row
+              = yield
     = render 'shared/modal'
