--- a/app/views/kaminari/_gap.html.slim
+++ b/app/views/kaminari/_gap.html.slim
@@ -1,2 +1,2 @@
-li.page-item.disabled
-  = link_to raw(t 'views.pagination.truncate'), '#', class: 'page-link'
+li.page-item.disabled.paginate_button
+  = link_to raw(t 'views.pagination.truncate'), '#', class: 'page-link', 'data-dt-idx': "0", tabindex: '0'
