Se finaliza interfaz de usuario.

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,2 +1,5 @@
-= link_to t("activerecord.model.store.other"), catalogs_path(class_name: "Store")
-= link_to t("activerecord.model.book.other"), catalogs_path(class_name: "Book")
+div.col-md-12
+  div.card
+    div.card-header
+      h2.card-title.text-center Bienvenido
+    div.card-body style="height: 446px"
