--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "estilos";
+@import "demo";
 
 .text-error-form {
   text-align: left;
