--- a/app/assets/stylesheets/estilos.css
+++ b/app/assets/stylesheets/estilos.css
@@ -376,8 +376,8 @@ input:focus {
     transition: all 60ms ease-in;
 }
 
-.fa {
-    width: 18px;
+.fas {
+    width: 18px !important;
     text-align: center;
 }
 
