--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -1,11 +1,12 @@
 nav.navbar.navbar-expand-lg
   div.container-fluid
-    div.navbar-wrapper
+    div class="navbar-wrapper"
       div.navbar-minimize
         button id="minimizeSidebar" class="btn btn-warning btn-fill btn-round btn-icon d-none d-lg-block"
           = icon('fas', 'ellipsis-v', class: 'visible-on-sidebar-regular')
           = icon('fas', 'bars', class: 'visible-on-sidebar-mini')
-      a.navbar-brand href="/" Store
+      a class="navbar-brand" href="/"
+        = image_tag("store.png", style: "width: 150px; height: 25px")
     button.navbar-toggler.navbar-toggler-right type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation"
       span.navbar-toggler-bar.burger-lines
       span.navbar-toggler-bar.burger-lines
@@ -16,3 +17,15 @@ nav.navbar.navbar-expand-lg
           div.input-group
             = icon('fas', 'search')
             input.form-control placeholder="Buscar..." type="text"
+      ul.navbar-nav
+        li class="nav-item dropdown"
+          a class="nav-link dropdown-toggle" href="https://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+            = icon('fas', 'list', style: 'font-size: 18px')
+          div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink"
+            a class="dropdown-item" href="#"
+              i.fas.fa-tools
+              = " Configuraciones"
+            div class="divider"
+            a href="#" class="dropdown-item text-danger"
+              = icon('fas','sign-out-alt')
+              = "Log out"
