--- a/app/views/catalogs/index.html.slim
+++ b/app/views/catalogs/index.html.slim
@@ -1,9 +1,13 @@
 div.col-md-12
   div.card.data-tables
     div.card-header
-      h4.card-title
-        = 'Catalogo de ' + t("activerecord.model." + @class_name.downcase + ".other")
-      p.card-category Lista de Registro
+      div.row
+        div.col-md-6
+          h4.card-title
+            = 'Catalogo de ' + t("activerecord.model." + @class_name.downcase + ".other")
+            p.card-category Lista de Registro
+        div.col-md-6.text-right
+          a class="btn btn-primary" data-remote="true" href="/catalogs/new?class_name=#{@class_name}" Registrar
     div.card-body.table-striped.table-no-bordered.table-hover.dataTable.dtr-inline.table-full-width
       div.fresh-datatables
         = render 'lista'
