Finalización de método de busqueda

--- a/app/views/search_books/_books.html.slim
+++ b/app/views/search_books/_books.html.slim
@@ -25,4 +25,6 @@
                   = "Cantidad: "
                   = assign.quantity
                   br
+    div.col-lg-12
+      = paginate @books
 - else
