--- a/app/views/search_books/search.html.slim
+++ b/app/views/search_books/search.html.slim
@@ -4,5 +4,5 @@ div.col-md-12
       div.row
         div.col-md-6
           h4.card-title Resultados
-    div.card-body
+    div.card-body id="cardBooks"
       = render 'books'
