--- a/app/views/search_books/search.html.slim
+++ b/app/views/search_books/search.html.slim
@@ -7,5 +7,5 @@ div.col-md-12
     div.card-body id="cardBooks"
       = render 'books'
     - unless @books.current_page == @books.total_pages
-        div.col-lg-12.text-center id="view-more"
-          = link_to('Ver más...', url_for(page: @books.current_page + 1), remote: true)
+      div.col-lg-12.text-center id="view-more"
+        = link_to('Ver más...', url_for(page: @books.current_page + 1), class: 'btn btn-info', remote: true)
