--- a/app/views/shared/_modal.html.slim
+++ b/app/views/shared/_modal.html.slim
@@ -14,3 +14,21 @@ div class="modal fade modal-primary" id="modalCatalogos" tabindex="-1" role="dia
         a class="btn btn-wd btn-success btn-outline" href="#responsive" id="btn_modal_eliminar" Aceptar
         = link_to 'Cerrar', '', class: "btn btn-wd btn-danger btn-outline", 'data-dismiss': "modal", id: 'btn_modal_cerrar'
         = link_to 'Cancelar', '', class: "btn btn-danger btn-outline", 'data-dismiss': "modal", id: 'btn_modal_cancelar'
+
+div class="modal fade" id="modalSesionDestroy" tabindex="-1" role="dialog" aria-labelledby="modalCenterTitle" aria-hidden="true"
+  div.modal-dialog
+    div.modal-content
+      div.modal-header
+        h5.modal-title id="modal_title_sesiond_estroy"
+          i.text-success.fas.fa-sign-out-alt
+          = " Confirmación"
+        button type="button" class="close" data-dismiss="modal" aria-label="Cerrar"
+          span aria-hidden="true" &times;
+      div.modal-body style="max-height: 500px; overflow-y: auto;"
+        div.container-fluid
+          div.row.mt-2
+            div.col-12.col-sm-12
+              = "¿Está seguro de salir de la sesión?"
+      div.modal-footer
+        a.btn.btn-wd.btn-success.btn-outline rel="nofollow" data-method="delete" href="/users/sign_out" Aceptar
+        = link_to 'Cancelar', '', class: "btn btn-danger btn-outline", 'data-dismiss': "modal", id: 'btn_modal_cancelar'
