--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,6 +18,7 @@ html
             div.container-fluid
               div.row
                 = yield
+          = render "shared/footer"
       = render 'shared/modal'
   - else
     body
